--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>3D Object</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
@@ -18,48 +18,57 @@
         function init() {
 
             scene = new THREE.Scene();
-            scene.background = new THREE.Color(0xdddddd);
+            scene.background = new THREE.Color(0xDBDBDB);
 
             camera = new THREE.PerspectiveCamera(40, window.innerWidth / window.innerHeight, 1, 5000);
             camera.rotation.y = 45 / 180 * Math.PI;
-            camera.position.x = 2;
-            camera.position.y = 2;
-            camera.position.z = 1;
+            camera.position.x = -30;
+            camera.position.y = 14;
+            camera.position.z = -13;
 
             renderer = new THREE.WebGLRenderer({ antialias: true });
             renderer.setSize(window.innerWidth, window.innerHeight);
             document.body.appendChild(renderer.domElement);
 
             controls = new THREE.OrbitControls(camera, renderer.domElement);
+            controls.enableDamping = true;
+            controls.dampingFactor = 0.1;
             controls.addEventListener('change', render);
 
-            directionalLight = new THREE.DirectionalLight(0xffffff, 0);
-            directionalLight.position.set(1, 0, 0);
+            hlight = new THREE.AmbientLight(0x404040, 2);
+            scene.add(hlight);
+
+            directionalLight = new THREE.DirectionalLight(0xffffff, 2.5);
+            directionalLight.position.set(0, 1, 0);
             directionalLight.castShadow = true;
             scene.add(directionalLight);
 
-            const light = new THREE.PointLight(0xd0d0d0, 1);
+            light = new THREE.PointLight(0xc4c4c4, 0.5);
             light.position.set(0, 300, 500);
             scene.add(light);
 
-            const light2 = new THREE.PointLight(0xd0d0d0, 1);
+            light2 = new THREE.PointLight(0xc4c4c4, 0.5);
             light2.position.set(500, 100, 0);
             scene.add(light2);
 
-            const light3 = new THREE.PointLight(0xd0d0d0, 1);
+            light3 = new THREE.PointLight(0xc4c4c4, 0.5);
             light3.position.set(0, 100, -500);
             scene.add(light3);
 
-            const light4 = new THREE.PointLight(0xd0d0d0, 1);
+            light4 = new THREE.PointLight(0xc4c4c4, 0.5);
             light4.position.set(-500, 300, 500);
             scene.add(light4);
 
-            // Carga del modelo glTF
             const loader = new THREE.GLTFLoader();
             loader.load('scene.gltf', function (gltf) {
-                const car = gltf.scene.children[0];
-                car.scale.set(3, 3, 3);
+                const object = gltf.scene.children[0];
+                object.scale.set(50, 50, 50);
                 scene.add(gltf.scene);
+                const boundingBox = new THREE.Box3().setFromObject(object);
+                const center = new THREE.Vector3();
+                boundingBox.getCenter(center);
+
+                object.position.sub(center);
                 animate();
             });
         }
