--- a/index.html
+++ b/index.html
@@ -83,7 +83,15 @@
             render();
         }
 
+        function onWindowResize() {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        }
+
         init();
+
+        window.addEventListener('resize', onWindowResize);
     </script>
 </body>
 
